--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,9 +23,15 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "starting login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "login end"
+   #   echo "login end"
+    - name: Build Docker image
+      run: | 
+        docker build -t gerodrig/docker-graphql:0.0.2 .
         
+    - name: Push Docker image
+      run: |
+        docker push gerodrig/docker-graphql:0.0.2 .
+      
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
