--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,12 @@ jobs:
     - name: Build Docker image
       run: | 
         docker build -t gerodrig/docker-graphql:0.0.2 .
+        docker build -t gerodrig/docker-graphql:latest .
         
     - name: Push Docker image
       run: |
         docker push gerodrig/docker-graphql:0.0.2
+        docker push gerodrig/docker-graphql:latest
       
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
