--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,21 +30,24 @@ jobs:
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
         
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New Version: $NEW_VERSION!!!!!!"
-   #   echo "login end"
-#     - name: Build Docker image
-#       run: | 
-#         docker build -t gerodrig/docker-graphql:0.0.2 .
-#         docker build -t gerodrig/docker-graphql:latest .
         
-#     - name: Push Docker image
-#       run: |
-#         docker push gerodrig/docker-graphql:0.0.2
-#         docker push gerodrig/docker-graphql:latest
+   #   echo "login end"
+    - name: Build Docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: | 
+        docker build -t gerodrig/docker-graphql:$NEW_VERSION .
+        docker build -t gerodrig/docker-graphql:latest .
+        
+    - name: Push Docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push gerodrig/docker-graphql:$NEW_VERSION
+        docker push gerodrig/docker-graphql:latest
       
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
